--- a/kyxx/10230426.html
+++ b/kyxx/10230426.html
@@ -38,7 +38,7 @@
 				“明天就是图灵测试的日子了啊。”
 				曹逸帆，躺在床上，嘴角的笑意不止。
 				他等待这一天太久了。
-				望着窗外高悬的月亮，他逐渐合上了眼
+				望着窗外高悬的月亮，他逐渐合上了眼。
 				咚!咚!咚!
 				紧促的敲门声划破了月夜的寂静。
 				曹逸帆猛得睁开眼，愣了一会儿后起身，趴在窗前。
@@ -64,15 +64,13 @@
 				"这就是许妍吗..."
 				曹逸帆端详着她,渐渐看入迷了。
 				皎洁的月光照在这名少女圆润的脸上,皮肤是白皙的,脸颊上带着些许的红晕,粉嫩的嘴唇微张着,由于离得太近,逸帆至能感受到她呼出的热气。
-				"好....好可爱."曹逸帆见过不少富家贵族的女孩,但都
-				未有能与许妍媲美者。
-				就在逸帆看得入迷时,那长长的睫毛下,一对水灵灵的大眼缓
-				缓睁开,那眼神,是清澈的,纯真无邪的。
+				"好....好可爱."曹逸帆见过不少富家贵族的女孩,但都未有能与许妍媲美者。
+				就在逸帆看得入迷时,那长长的睫毛下,一对水灵灵的大眼缓缓睁开,那眼神,是清澈的,纯真无邪的。
 				许妍坐起身来,揉了揉眼,环顾四周,最后目光落在一旁的逸帆身上他也坐起身来,两个人就这样对视着,许妍脸颊的红晕更加明显。
 				"这里是..."许妍开口了,那声音是如此的甜美。
 				就这样,俩人相遇了,那个无法忘却的她,出现在了他的生命里。</div>
 			<div class="insert-box">
-				<p>作者评语：CF从此便开始了他的后宫之旅。</p>
+				<p>作者评语：CYF从此便开始了他的后宫之旅。</p>
 				<p>温馨提醒：早恋是不对的，小心别被每天扣五分。</p>
 			</div>
         </article>
