--- a/kyxx/scr.html
+++ b/kyxx/scr.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 我的小说. 保留所有权利。</p>
+        <p>&copy; 2025 無名的CZY保留所有代码权利。</p>
     </footer>
 
     <script src="./scscpt.js"></script>
