--- a/kyxx/scr.html
+++ b/kyxx/scr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的小说</title>
+    <title>加密页面</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css"> <!-- 使用原来的 CSS 文件 -->
 </head>
@@ -27,8 +27,8 @@
 
     <!-- 页面内容 -->
     <header>
-        <h1>我的小说</h1>
-        <p>欢迎来到我的小说世界</p>
+        <h1>可以西夕</h1>
+        <p>往昔篇</p>
     </header>
 
     <main>
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 無名的CZY保留所有代码权利。</p>
+        <p>&copy; 2025 無名的CZY、cyf 保留所有权利。</p>
     </footer>
 
     <script src="./scscpt.js"></script>
