--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- 导航栏 -->
     <nav class="cyber-nav">
         <ul>
-            <li><a href="#home">首页</a></li>
+            <li><a href="https://wumingdeczy.github.io/tale/">首页</a></li>
             <li class="dropdown">
                 <a href="#library">图书馆</a>
                 <div class="dropdown-content">
@@ -42,7 +42,7 @@
                     <h3>《可以西夕》</h3>
                     <p>“明天就是图灵测试的日子了啊。”<br>
 				曹逸帆，躺在床上，嘴角的笑意不止。</p>
-                    <a href="#" class="view-link">查看此小说</a>
+                    <a href="https://wumingdeczy.github.io/tale/kyxx/scr.html" class="view-link">查看此小说</a>
                 </div>
                 <div class="work-card">
                     <h3>敬请期待</h3>
