--- a/kyxx/scr.html
+++ b/kyxx/scr.html
@@ -11,7 +11,7 @@
     <!-- 导航栏 -->
     <nav class="cyber-nav">
         <ul>
-            <li><a href="#home">首页</a></li>
+            <li><a href="https://wumingdeczy.github.io/tale/">首页</a></li>
             <li class="dropdown">
                 <a href="#library">图书馆</a>
                 <div class="dropdown-content">
