--- a/kyxx/10230426.html
+++ b/kyxx/10230426.html
@@ -75,6 +75,11 @@
 			</div>
         </article>
     </main>
+	<div class="chapter-navigation">
+		<a href="#" class="nav-btn prev-btn">上一章</a>
+		<a href="#" class="nav-btn next-btn">下一章</a>
+	</div>
+	<br><br><br>
 
     <footer>
         <p>&copy; 2025 111班CYF 保留著作内容所有权利；111班CZY 保留代码所有权利。</p>
