--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>作品展示</h2>
             <div class="works-grid">
                 <div class="work-card">
-                    <h3>《可以西夕》</h3>
+                    <h3>CYF-《可以西夕》</h3>
                     <p>“明天就是图灵测试的日子了啊。”<br>
 				曹逸帆，躺在床上，嘴角的笑意不止。</p>
                     <a href="https://wumingdeczy.github.io/tale/kyxx/scr.html" class="view-link">查看此小说</a>
