--- a/kyxx/10230426.html
+++ b/kyxx/10230426.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的小说</title>
+    <title>CYF-可以西夕</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -27,7 +27,7 @@
 
     <!-- 页面内容 -->
     <header>
-        <h1>可以西夕</h1>
+        <h1>可以西夕</h1>-(By CYF)
         <p>往昔篇</p>
     </header>
 
