--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- 导航栏 -->
     <nav class="cyber-nav">
         <ul>
-            <li><a href="https://wumingdeczy.github.io/tale/">首页</a></li>
+            <li><a href="#home">首页</a></li>
             <li class="dropdown">
                 <a href="#library">图书馆</a>
                 <div class="dropdown-content">
@@ -24,7 +24,7 @@
             <li><a href="#more">更多</a></li>
         </ul>
     </nav>
-
+	<div class="act">
     <!-- 首页介绍 -->
     <section id="home" class="section intro-section">
         <div class="container">
@@ -32,22 +32,25 @@
             <p>分享着一切</p>
         </div>
     </section>
-
+	
+	<br><br>
+	<div class="story" style="width: 80%;margin: auto;">
     <!-- 作品展示 -->
     <section id="works" class="section works-section">
         <div class="container">
             <h2>作品展示</h2>
             <div class="works-grid">
                 <div class="work-card">
-                    <h3>CYF-《可以西夕》</h3>
+                    <h3>《可以西夕》</h3>
                     <p>“明天就是图灵测试的日子了啊。”<br>
 				曹逸帆，躺在床上，嘴角的笑意不止。</p>
                     <a href="https://wumingdeczy.github.io/tale/kyxx/scr.html" class="view-link">查看此小说</a>
                 </div>
                 <div class="work-card">
-                    <h3>敬请期待</h3>
-                    <!--<p>他每天都会去山上砍柴，然后带回村子里卖……</p>
-                    <a href="#" class="view-link">查看此小说</a>-->
+                    <h3>DAPi XeZuN</h3>
+                    <p>精融福地，一处山洞内，<br>
+				曹凢正抓紧炼化着外公留下的剑道气运。</p>
+                    <a href="https://wumingdeczy.github.io/tale/dapi/scr.html" class="view-link">查看此小说</a>
                 </div>
                 <div class="work-card">
                     <h3>敬请期待</h3>
@@ -77,8 +80,8 @@
                 </div>
             </div>
         </div>
-    </section>
-
+    </section></div>
+<br><br>
     <!-- 联系方式 -->
     <section id="contact" class="section contact-section">
         <div class="container">
@@ -95,7 +98,8 @@
 			</ul>
         </div>
     </section>
-
+	</div>
+		
     <!-- 页脚 -->
     <footer>
         <p>&copy; 2025 無名的保留代码所有权利。</p>
